<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EVE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="textViewNoListas">No hay listas</string>
    <string name="textViewCrearLista">¿Crear una?</string>

    <string name="msg_login_en_curso">Verificando…</string>
    <string name="msg_password_no_introducida">Introduce una contraseña</string>
    <string name="msg_username_no_introducido">Introduce un nombre de ususario</string>
    <string name="msg_email_no_introducido">Introduce tu email</string>

    <string name="action_nuevo">Nuevo</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_notificaciones">Notificaciones</string>
    <string name="action_send_login">Login</string>
    <string name="action_next">NEXT</string>
    <string name="action_done">DONE</string>

    <string name="title_section1">Stream</string>
    <string name="title_section2">Mis Listas</string>
    <string name="title_section3">Administrar</string>
    <string name="title_section4">Buscar</string>
    <string name="title_login">Login</string>
    <string name="title_signin">Sign Up</string>

    <string name="tag_fragment_my_ists">tag_fragment_my_ists</string>
    <string name="tag_fragment_login">tag_fragment_login</string>
    <string name="tag_fragment_portada">tag_fragment_portada</string>

    <string name="label_authenticator_activity">Login</string>


    <!-- Errores -->
    <string name="error_401">Usuario o contraseña incorrectos</string>
    <string name="error_412">Ya existe una cuenta asociada a ese correo</string>
    <string name="error_400">Error en la comunicación. El comando enviado no ha sido reconocido por el servidor</string>
    <string name="error_402">Ya existe una cuenta asociada a ese email</string>
    <string name="error_500">Error desconocido en el servidor</string>
    <string name="error_600">Error desconocido</string>
    <string name="error_403">Actualmente esta cuenta no tiene acceso a la aplicación.</string>

    <string name="error_501">Error de comunicación con el servidor</string>

    <string name="error_carga_ofertas">Error al cargar ofertas</string>


    <string name="login_password_text">Password</string>
    <string name="login_password_hint">mínimo 8 caracteres</string>
    <string name="login_email_text">Email</string>
    <string name="login_email_hint">example@abc.com</string>
    <string name="login_full_name_hint">Your full name</string>

    <string name="selecciona_cuenta">Selecciona una cuenta</string>
    <string name="aceptar">Aceptar</string>
    <string name="btnLogin">Login</string>
    <string name="btnSigninup">Sign Up</string>
    <string name="developed_by">Designed and Developed by </string>
    <string name="inigo_alonso">Iñigo Alonso</string>
    <string name="tag_fragment_signinup_one">tag_fragment_signinup_one</string>
    <string name="msg_password_pequenya">Contraseña demasiado pequeña</string>
    <string name="tag_fragment_signinup_two">tag_fragment_signinup_two</string>
    <string name="error_image_null">Error al cargar imagen</string>
    <string name="error_crop_app_not_found">No se ha encontrado ninguna app de recorte</string>
    <string name="msg_elige_crop_app">Elige aplicación para recortar</string>
    <string name="msg_completar_accion">Completar usando</string>
    <string name="msg_elige_imagen">Selecciona imagen</string>
    <string name="profile_new_password_text">Password</string>
    <string name="logout">Logout</string>
    <string name="label_profile_activity">Profile</string>
    <string name="done">GUARDAR</string>
    <string name="ya_existe_email">Ya existe email</string>
    <string name="msg_ya_existe_email">Lo sentimos, actualmente ya existe una cuenta asociada a ese email. Introduce de nuevo otro email además de otros cambios que hayas realizado en tu perfil.</string>
    <string name="cambios_no_realizados">Cambios no realizados</string>
    <string name="guardado_correctamente">Guardado correctamente</string>
    <string name="cancelar">Cancelar</string>
    <string name="msg_seguro_salir">¿Estás seguro de que deseas deslogearte de esta cuenta?</string>
    <string name="titulo">Título</string>
    <string name="colaboraciones_usuario">Colaboraciones por usuario:</string>
    <string name="max_num_votos">Máximo número de votos:</string>
    <string name="default_num_colaboraciones">0</string>
    <string name="default_max_votos">1</string>
    <string name="privado">Privado</string>
    <string name="publico">Público</string>
    <string name="crear">CREAR</string>
    <string name="label_nueva_lista_activity">Nueva Lista</string>
    <string name="msg_fullname_vacio">No puedes tener un nombre vacío</string>
    <string name="msg_email_vacio">Debes especificar un email</string>
    <string name="msg_email_valido">Debes introducir un email válido</string>
    <string name="invitados">Invitados</string>
    <string name="elemento_sin_titulo">Elemento si titulo</string>
    <string name="nuevo_elemento">Nuevo Elemento</string>
    <string name="no_titulo">Debes introducir un título</string>

    <array name="array_input_imagen">
        <item>Cámara</item>
        <item>Galería</item>
    </array>

    <array name="array_input_imagen_borrar">
        <item>Cámara</item>
        <item>Galería</item>
        <item>Eliminar Imagen</item>
    </array>

    <string-array name="array_privacidad">
        <item>Pública</item>
        <item>Semi Pública</item>
        <item>Semi Privada</item>
        <item>Privada</item>
    </string-array>

    <string-array name="array_colaboracion">
        <item>Colaborativa</item>
        <item>No colaborativa</item>
    </string-array>

</resources>
