<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

   <!-- <item android:id="@+id/action_buscar"
        android:title="@string/action_buscar"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom" />-->

    <item android:id="@+id/action_nuevo"
        android:title="@string/action_nuevo"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_notificaciones"
        android:title="@string/action_notificaciones"
        android:icon="@drawable/ic_action_bell"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
