<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingTop="35dp"
android:background="#ededed"
android:orientation="vertical"
tools:context=".AuthenticatorActivity$SigninupTwoFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:paddingTop="7dp"
        android:text="@string/login_email_text"/>

    <EditText
        android:id="@+id/editTextSigninupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:hint="@string/login_email_hint"/>

</RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:paddingTop="7dp"
        android:text="@string/login_password_text"/>

    <EditText
        android:id="@+id/editTextSigninupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:inputType="textPassword"
        android:hint="@string/login_password_hint"/>

</RelativeLayout>



</LinearLayout>