<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticatorActivity$PortadaFragment">

    <ImageView
        android:id="@+id/imgEVE"
        android:layout_width="match_parent"
        android:src="@drawable/logo_eve_hd"
        android:padding="30dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="40dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/btnLogin"/>

        <Button
            android:id="@+id/btnSigninup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/btnSigninup"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSigninup"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/developed_by"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:layout_marginLeft="2dp"
                android:text="@string/inigo_alonso"/>

            </LinearLayout>

        </RelativeLayout>



</RelativeLayout>